[build-system]
requires = ["setuptools>=61.0,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "mikoshi-curiosity"
version = "0.1.3"
description = "Domain-agnostic curiosity engine — explore any state space and find interesting things"
authors = [{name = "Mikoshi Ltd", email = "mikoshiuk@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
readme = "README.md"
keywords = ["curiosity", "exploration", "discovery", "intrinsic-motivation", "go-explore", "recommendation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
data = ["pandas>=1.3"]
viz = ["matplotlib>=3.4"]
all = ["pandas>=1.3", "matplotlib>=3.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
